updated css for embedded iframe

--- a/css/site.scss
+++ b/css/site.scss
@@ -1145,13 +1145,13 @@ footer {
   height: 0;
 }
 
-iframe:not(.skip-absolute) {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+// iframe:not(.skip-absolute) {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+// }
 
 .centered {
   position: fixed;
