--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -27,7 +27,7 @@ $dark-blue:#2C3E50;
 $home-color: #C03A2B;
 //$home-color: #149747;
 //$team-color: #D44942;
-$team-color:#3376A0;
+$about-color:#3376A0;
 //$team-color: #3DB7DD;
 $project-color: #EB0021;
 $download-color: #F36229;
