--- a/css/site.scss
+++ b/css/site.scss
@@ -263,8 +263,8 @@ body {
   @include navigation-button($home-color);
 }
 
-.team-button {
-  @include navigation-button($team-color);
+.about-button {
+  @include navigation-button($about-color);
 }
 
 
@@ -274,7 +274,7 @@ body {
 }
 
 .blog-button {
-  @include navigation-button($team-color);
+  @include navigation-button($about-color);
 }
 
 
@@ -283,7 +283,7 @@ body {
 }
 
 .positions-button {
-  @include navigation-button($team-color);
+  @include navigation-button($about-color);
 }
 
 
@@ -352,11 +352,11 @@ body {
 }
 
 .person-title {
-  @include subpage-title($team-color);
+  @include subpage-title($about-color);
 }
 
-.team-title {
-  @include page-title($team-color);
+.about-title {
+  @include page-title($about-color);
 }
 
 .funding-title {
@@ -1145,13 +1145,13 @@ footer {
   height: 0;
 }
 
-// iframe:not(.skip-absolute) {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-// }
+.video-wrapper iframe:not(.skip-absolute) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .centered {
   position: fixed;
