--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -90,7 +90,7 @@
     }
   }
   &.selected, &.highlighted {
-    border: 2px solid $about-color;
+    border: 2px solid $main-color;
     background: #EEE;
   }
 }
