cleaned up publications

--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -10,31 +10,13 @@ layout: default
     {% assign publications = site.publications | sort: 'year' %}
     {% assign publications = publications | sort: 'order' %}
 
-    {% for pub in site.publications %}
-      {% if pub.type == 'preprint' %}
-        {% assign haspreprints = true %}
-      {% endif %}
-    {% endfor %}
+  
 
-    {% if haspreprints %}
-      <h1>Preprints</h1>
-      {% for publication in publications reversed %}
-        {% if publication.personal %}
-        {% elsif publication.type == 'preprint' %}
-          {% include publication_list_entry.html %}
-        {% endif %}
-      {% endfor %}
-    {% endif %}
-
-    <h1>Peer-Reviewed Journal and Conference Papers </h1>
+    <h1>Publications </h1>
 
     {% for publication in publications reversed %}
-      {% if publication.personal %}
-      {% elsif publication.type == "paper" %}
         {% include publication_list_entry.html %}
-      {% endif %}
     {% endfor %}
-
 
 
 
