--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -1,5 +1,5 @@
 <div class="paper-list-block">
-	<a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
+	<a href="{{publication.paper-page}}"><img alt="{{ publication.shortname }} screenshot"
                                                            class="paper-image-small"
                                                            src="{{ site.baseurl }}/assets/images/publications/{{ publication.image }}"></a>
     <p class="pubs">
@@ -28,7 +28,7 @@
 
         {% endfor %}
         <br/>
-        <span class="paper-title"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></span><br/>
+        <span class="paper-title"><a href="{{publication.paper-page}}">{{ publication.title }}</a></span><br/>
         {% if publication.type == "thesis" %}
           {{ publication.institution }}, {{ publication.thesis_type }}, {{ publication.month }} {{ publication.year }}
 
