working on landing page and design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,7 @@
     <div class="footer-content">
         <div class="footer-disclaimer">
             <p>
-                The visualization design lab is part of
+                The upset page is maintained by <a href="http://alexander-lex.net">Alexander Lex</a>, who is affiliated with the following institutions:
             </p>
         </div>
         <div class="footer-list-institutions">
@@ -82,8 +82,7 @@
                 Copyright &copy; 2016-{{ site.time | date: '%Y' }} The Visualization Design Lab. All content on this website is licensed under
                 the
                 <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
-                    (CC BY)</a>. <br/> Copyright or exclusive license of the linked publications is frequently with the publishers. Logo by <a
-                    href="http://www.antarctic-design.co.uk">Antarctic Design</a>. Last updated on {{ site.time | date: '%B %d, %Y' }}
+                    (CC BY)</a>. <br/> Copyright or exclusive license of the linked publications is frequently with the publishers. Last updated on {{ site.time | date: '%B %d, %Y' }}
             </p>
         </div>
 
