--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -75,6 +75,7 @@ h1 {
 }
 
 h2 {
+  padding-top: 30px;
   font-size: $base-font-size * 1.5; // 16 * 2 = 32px
   border-bottom: 2px $light-gray solid;
 }
