--- a/css/site.scss
+++ b/css/site.scss
@@ -26,7 +26,7 @@ $large-display: new-breakpoint(min-width 1200px $large-display-columns);
   float: left;
   text-align: left;
   margin-right: 30px;
-  width: 95px;
+  width: 100px;
 
   &:last-child {
     margin-right: 0px;
@@ -1283,3 +1283,37 @@ pre.bibtex {
 .fa{
   min-width: 18px
 }
+
+.centered-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.note {
+  padding: 20px;
+  padding-bottom: 5px;
+  overflow-x: auto;
+  background: #f0f7fb;
+  color: #2b2a2a;
+
+  border: solid 1px $main-color;
+  border-radius: 6px;
+  line-height: 18px;
+  overflow: hidden;
+
+  b {
+    font-weight: 400;
+  }
+    
+
+}
+
+.ref {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-style: italic;
+  font-size: 0.8em;
+
+}
+
