--- a/_includes/version_list_entry.html
+++ b/_includes/version_list_entry.html
@@ -6,7 +6,7 @@
 	<img alt="{{ version.name }} screenshot" class="" src="{{ site.baseurl }}/assets/images/versions/{{ version.image }}">
     <p>{{version.content}}</p>
 
-
+<p>
 {% if version.web %}
 <i class="fa fa-globe"></i> &nbsp;<a href="{{ version.web }}">Website</a> &nbsp;&nbsp;
 {% endif %}
@@ -15,11 +15,32 @@
 <i class="fa  fa-code-fork"></i> &nbsp;<a href="{{ version.source }}">Source Code</a> &nbsp;&nbsp;
 {% endif %}
 
+{% if version.documentation %}
+<i class="fa fa-book"></i> &nbsp;<a href="{{ version.documentation }}">Documentation</a> &nbsp;&nbsp;
+{% endif %}
+
 
 {% if version.publication %}
 <i class="fa fa-file-text"></i> &nbsp;<a href="{{ version.publication }}">Publication</a> &nbsp;&nbsp;
 {% endif %}
+</p>
+{% if version.license %}
+<p>
+<i class="fa fa-gavel"></i> &nbsp;License: {{version.license}} &nbsp;&nbsp;
+</p>
+{% endif %}
 
+{% if version.language %}
+<p>
+<i class="fa fa-code"></i> &nbsp;Language: {{version.language}} &nbsp;&nbsp;
+</p>
+{% endif %}
+
+{% if version.authors %}
+<p>
+<i class="fa fa-user"></i> &nbsp;Author(s): {{version.authors | markdownify | remove: '<p>' | remove: '</p>' }} &nbsp;&nbsp;
+</p>
+{% endif %}
 
 
 </div>
