some layout improvements, cleanup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <div class="navigation-buttons">
     <ul>
       <!-- todo: add examples-->
-      {% assign navButtons = "home|advanced|versions|upset|about" | split: "|" %}
+      {% assign navButtons = "home|advanced|implementations|upset|about" | split: "|" %}
       {% for nav in navButtons %}
       {% assign navURL = nav %}
       {% assign pageURL = page.url %}
