--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
 
       {% else %}
       <li class="nav-button">
-        <a href="{{ site.baseurl }}/{{ navURL }}">
+        <a href="{{ site.baseurl }}/{{ navURL }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
       {% endif %}
