--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 
   <div class="logo">
-    <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/upset_logo.png" alt="UpSet Logo">
+    <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/upset_logo.svg" alt="UpSet Logo">
   </div>
 <div class="navigation">
  
